core#518 Fix z-index of network status indicator

--- a/app/components/NetworkStatusIndicator/NetworkStatusIndicator.scss
+++ b/app/components/NetworkStatusIndicator/NetworkStatusIndicator.scss
@@ -6,4 +6,5 @@
   font-size: 1rem;
   text-align: center;
   width: 100%;
+  z-index: z(snackbar)
 }
